--- a/statics/css/style.css
+++ b/statics/css/style.css
@@ -16,15 +16,6 @@ a:link {
     
 }
 
-.file-send-recive {
-    margin: auto;
-    margin-bottom: 50px;
-    width: 50%;
-    border-style: solid;
-    border-width: 10px;
-    border-color: rgb(248, 248, 248);
-}
-
 .container {
     background-color: rgb(211, 231, 236);
     margin: auto;
@@ -38,7 +29,6 @@ a:link {
     box-shadow: 10px 10px 15px lightblue;
 }
 
-
 .mygrid {
     background-color: rgb(211, 231, 236);
     
@@ -46,7 +36,7 @@ a:link {
     margin-bottom: 20px;
 
     border-radius: 15px;
-    width: 20%;
+    width: 30%;
     padding: 10px;
 
     text-align: center;
@@ -56,7 +46,6 @@ a:link {
 button {
     border-color: #007bff;
     border-radius: 5px;
-
     padding: 5px;
 
     font-size: 1.5rem;
@@ -74,7 +63,6 @@ img {
     border-style: solid;
     border-radius: 4px;
     width: 15%;
-    
 }
 
 img:hover {
@@ -86,7 +74,6 @@ img:active {
     /* when click */
     border-color: rgba(10, 10, 207, 0.973);
 }
-
 
 .downolad {
     /* for download icon */
@@ -108,12 +95,18 @@ img:active {
 input {
     border-radius: 5px;
     border-color: #ebdede;
-    padding: 5px;
 
+    width: 23%;
+
+    padding: 5px;
     text-align: center;
     font-size: 20px;
 }
 
 input:active {
     transform: translateY(4px);
+}
+
+#filekey {
+    width: 70%;
 }
