--- a/templates/index.html
+++ b/templates/index.html
@@ -6,13 +6,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
     <title>File Share</title>
 </head>
 
 <body>
 
-    <h1>
+    <h1 id="head-line">
         <a href="{% url 'fileshare:index' %}">File Share</a>
     </h1>
 
@@ -63,6 +64,7 @@
     </div>
 
 
+    {% include "footer.html" %}
 
 </body>
 
