footer link update

--- a/templates/index.html
+++ b/templates/index.html
@@ -41,8 +41,8 @@
         <div class="container">
             <h1>Receive File</h1>
             {% if userfile %}
-            <a href="{{userfile.file.url}}" download="{{userfile.file}}">
-                <img class="downolad" src="{% static 'images/download.png' %}" alt="Download Now.">
+            <a href="{{userfile.file.url}}" download>
+                <img class="downolad" src="{% static 'images/download.png' %}" alt="Download">
             </a>
 
 
