--- a/templates/footer.html
+++ b/templates/footer.html
@@ -25,9 +25,9 @@
       <div class="footer-col">
         <h4>follow us</h4>
         <div class="social-links">
-          <a href="https://github.com/pd28CSE"><i class="fab fa-github"></i></a>
-          <a href="https://www.linkedin.com/in/partho-debnath-b8632a201"><i class="fab fa-linkedin-in"></i></a>
-          <a href="https://www.facebook.com/partho.debnath.142"><i class="fab fa-facebook-f"></i></a>
+          <a href="https://github.com/pd28CSE" target="_blank"><i class="fab fa-github"></i></a>
+          <a href="https://bd.linkedin.com/in/partho-debnath-b8632a201" target="_blank"><i class="fab fa-linkedin-in"></i></a>
+          <a href="https://www.facebook.com/partho.debnath.142" target="_blank"><i class="fab fa-facebook-f"></i></a>
         </div>
       </div>
     </div>
