--- a/templates/index.html
+++ b/templates/index.html
@@ -32,7 +32,7 @@
             {% else %}
             <form method="post" action="{% url 'fileshare:index' %}" enctype="multipart/form-data">
                 {% csrf_token %}
-                <input type="file" name="files" required> <br> <br>
+                <input type="file" name="files" required multiple> <br> <br>
                 <button type="submit">Send</button>
             </form>
             {% endif %}
